# valle-data-pipeline

./: .gitignore  Dockerfile  Makefile  compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
analize/: data_distribution.ipynb  exports.ipynb  korea_imports.ipynb  local_commerce.ipynb
ingest/: config.py  load.py  pipeline.py  s3.py
transform/: exports.ipynb  korea_imports.ipynb  pipeline.py
transform/eda/: exports.ipynb  korea_imports.ipynb
transform/model/: exports.ipynb  korea_imports.ipynb
visualize/: main.py
