[project]
name = "talento-tech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.11",
    "duckdb>=1.3.2",
    "marimo[recommended]>=0.15.2",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
]
